2000-11-10  Radek Doulik  <rodo@helixcode.com>

	* htmltextslave.c (get_ys): helper function, calculates y shift
	for sub/super script
	(draw_spell_errors): use get_ys
	(draw_normal): likewise
	(draw_highlighted): likewise

	* gtkhtmlfontstyle.c (gtk_html_font_style_merge): check for
	DEFAULT style and replace it with SIZE_3

2000-11-09  Radek Doulik  <rodo@helixcode.com>

	* gtkhtmlfontstyle.h: added GTK_HTML_FONT_STYLE_SUBSCRIPT and
	GTK_HTML_FONT_STYLE_SUPERSCRIPT

	* htmlengine.c: added ID_SUB, ID_SUP
	(parse_s): added <sub> and <sup> tags

	* htmlentity.c: added all entities from XHTML 1.0

	* htmltokenizer.c (in_entity): removed old code which doesn't make
	sense to me, let me know if you are aware of idea of this code
	(in_entity): check for searchCount > 9 (&thetasym;)

	* htmlentity.c: removed old code

2000-11-08  Larry Ewing  <lewing@helixcode.com>

	* htmltable.c (save_plain): add simple test/plain save method.
	(html_table_class_init): use save_plain.
	(save): use the result of the calls to html_object_save.

	* htmlimage.c (save_plain): only try to output the alt text if it
	is present.

2000-11-08  Radek Doulik  <rodo@helixcode.com>

	* htmlcolorset.c (SET_GCOLOR): set color only if it's unchanged

	* htmltablecell.c (save): likewise

	* htmltable.c (save): added simple save method

2000-11-07  Larry Ewing  <lewing@helixcode.com>

	* htmlrule.c (html_rule_class_init): use save_plain.
	(save_plain): add a simple rule to the text/plain output.

	* htmlclueflow.c (save_plain): use format string.

	* htmlengine-save.c (write_header): use a format string rather
	than passing the body directly.
	(html_engine_save_buffer_receiver): fix argument type.
	
	* htmlclueflow.c (string_append_nonbsp): make sure we count the
	extra bytes we lose when converting nbsp to a space.
	(save_plain): make sure we deal with byte length and character
	length where appropriate.

2000-11-07  Radek Doulik  <rodo@helixcode.com>
