@@ -396,7 +396,7 @@ void  gtk_html_redo  (GtkHTML *html);
 /* misc utils */
 
 void  gtk_html_set_default_background_color (GtkHTML *html, GdkColor *c);
-gpointer gtk_html_get_image_by_imageid (GtkHTML *html, gchar *id);
+gpointer  gtk_html_get_object_by_id (GtkHTML *html, const gchar *id);
 
 void  gtk_html_editor_command (GtkHTML *html, const gchar *command_name);
 
